--- a/static.html
+++ b/static.html
@@ -5,7 +5,8 @@
 </head>
 <body>
   <p>Here's some circles yo</p>
-  <div id="d3"></div>
+  <span id="tree"></span>
+  <span id="poem"></span>
   <p>Yup, definitely circles. </p>
   <script src="rt.js"></script>
 </body>
